[package]
name = 'example-pallet'
version = '0.0.1'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-std = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }
sp-runtime = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }
sp-io = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }
sp-core = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }
sp-arithmetic = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }
frame-system = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }

chainbridge = { path = "../chainbridge" , default-features = false}
example-erc721 = { path = "../example-erc721", default-features = false }

[dev-dependencies]
pallet-balances = { version = "2.0.0-rc6", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/centrifuge/substrate.git", rev = "ca1e934664875de0486f70e63ef7ef81e13e85ea" }
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "sp-arithmetic/std",
	"frame-support/std",
	"frame-system/std",
	"chainbridge/std",
    "example-erc721/std"
]
